Salesforce/main/default/main/default/objects/Prazo_de_Lancamento__c/Prazo_de_Lancamento__c.object-meta.xml
<CustomObject>
    <label>Prazo de Lançamento</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prazos de Lançamento</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>