Salesforce/main/default/main/default/objects/Prazo_de_Lancamento__c/fields/Cadastro_de_colheita__c.field-meta.xml
<CustomField>
    <fullName>Cadastro_de_colheita__c</fullName>
    <description>Fecha de cosecha límite para realizar un lanzamiento</description>
    <label>Cadastro de colheita</label>
    <length>5</length>
    <type>Text</type>
</CustomField>