Salesforce/main/default/main/default/objects/Prazo_de_Lancamento__c/fields/Configuracion_de_Marca__c.field-meta.xml
<CustomField>
    <fullName>Configuracion_de_Marca__c</fullName>
    <label>Configuración de Marca</label>
    <referenceTo>Configuracion_BMX__c</referenceTo>
    <relationshipLabel>Prazos de Lançamento</relationshipLabel>
    <relationshipName>Prazos_de_Lancamento</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>