Salesforce/main/default/main/default/objects/Prazo_de_Lancamento__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Prazos de Lançamento</relationshipLabel>
    <relationshipName>Prazos_de_Lancamento</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>