Salesforce/main/default/main/default/objects/Prazo_de_Lancamento__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Evento__c</columns>
    <columns>Estado__c</columns>
    <columns>Inicio__c</columns>
    <columns>Termino__c</columns>
    <columns>Cadastro_de_colheita__c</columns>
    <columns>Cadastro_de_plantio__c</columns>
    <filterScope>Mine</filterScope>
    <label>Todos</label>
</ListView>